--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -2,9 +2,60 @@
 background: #23074d;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to right, #cc5333, #23074d);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to right, #cc5333, #23074d); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
 .landing-grid{
 background: #23074d;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to right, #cc5333, #23074d);  /* Chrome 10-25, Safari 5.1-6 */
 background: linear-gradient(to right, #cc5333, #23074d); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+text-align: center;
+position: fixed;
+top:0;
+left:0;
+width:100%;
+height:100%;
+
+}
+.landing-grid img{
+    height:280px;
+    padding-top: 5em;
+    margin:auto;
+    /* width:28rem; */
+}
+.text-landing-grid{
+    border-radius:10px;
+    background:black;
+    opacity:0.7;
+    margin:auto;
+    width:70%; 
+}
+.text-landing-grid hr{
+    border-top: 5px dotted white;
+    margin: auto;
+    width:80%;
+}
+
+.text-landing-grid h1{
+    color:white;
+    text-align: center;
+    font-weight:bold;
+    font-size:66px;
+}
+.text-landing-grid p{
+    color:orange;
+    font-size: 20px;
+    margin: auto;
+    padding:1em;
+}
+.social-icons {
+    display: flex;
+    justify-content: space-between;
+    width:50%;
+    margin:auto;
+    /* padding:1rem; */
+}
+.social-icons i{
+    padding:8px;
+    font-size: 5em;
+    width: 30%;
 }
